// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders block text 1`] = `
<div>
  <span
    class="ax-text ax-block  "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders clipped text 1`] = `
<div>
  <span
    class="ax-text ax-block  ax-align--justify "
    style="--line-clamp: 2;"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders color text 1`] = `
<div>
  <span
    class="ax-text ax-block ax-text--indent-2 ax-align--justify ax-padding--sm ax-bg--lightest ax-color--secondary "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders marked text 1`] = `
<div>
  <span
    class="ax-text "
  >
    <bdi>
      <mark
        class="ax-mark"
      >
        Lorem ipsum
      </mark>
      <span>
         dolor sit amet, consectetur adipiscing elit.
      </span>
    </bdi>
  </span>
</div>
`;

exports[`Text renders marked text when not found 1`] = `
<div>
  <span
    class="ax-text "
  >
    <bdi>
      <b>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </b>
    </bdi>
  </span>
</div>
`;

exports[`Text renders marked text when not found 2`] = `
<div>
  <span
    class="ax-text "
  >
    <bdi>
      <b>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </b>
    </bdi>
  </span>
</div>
`;

exports[`Text renders serif text 1`] = `
<div>
  <span
    class="ax-text ax-block ax-text--dropcaps ax-align--justify ax-font--serif "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders simple text 1`] = `
<div>
  <span
    class="ax-text   "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders sized text 1`] = `
<div>
  <span
    class="ax-text   ax-font--md "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
  <span
    class="ax-text   "
    style="font-size: 10px;"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
  <span
    class="ax-text   "
    style="font-size: 3px;"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders weighted text 1`] = `
<div>
  <span
    class="ax-text   ax-weight--bold "
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis eros mollis, egestas mauris nec, tincidunt ipsum. Sed commodo sagittis sapien non sagittis. Vestibulum viverra sapien vitae nisi condimentum, eu malesuada velit iaculis. Duis pulvinar lobortis diam, a pharetra urna commodo non. Integer molestie pharetra enim a pulvinar. Fusce ultrices augue vel magna tincidunt, auctor efficitur lectus gravida. Nunc scelerisque urna nec augue tincidunt, ac aliquet velit facilisis.
    </span>
  </span>
</div>
`;

exports[`Text renders with tooltip 1`] = `
<div>
  <div
    class="ax-root"
  >
    <span
      class="ax-text "
    >
      <bdi>
        <span>
          Lorem 
        </span>
        <abbr
          class="ax-abbr ax-color--"
        >
          ipsum
        </abbr>
        <div
          class="ax-popper ax-root ax-tooltip ax-bg--darkest ax-color--empty "
          data-show="true"
          data-show-arrow="true"
          style="position: fixed; left: 0px; top: 0px; min-width: 0;"
        >
          <div
            class="ax-popper--body"
          >
            <span>
              Test tooltip
            </span>
          </div>
          <div
            class="ax-popper--arrow"
            style="position: absolute;"
          />
        </div>
        <span>
           dolor sit amet, consectetur adipiscing elit.
        </span>
      </bdi>
    </span>
  </div>
</div>
`;

exports[`Text renders with tooltip 2`] = `
<div>
  <div
    class="ax-root"
  >
    <span
      class="ax-text "
    >
      <bdi>
        <span>
          Lorem 
        </span>
        <abbr
          class="ax-abbr ax-color--"
        >
          ipsum
        </abbr>
        <span>
           dolor sit amet, consectetur adipiscing elit.
        </span>
      </bdi>
    </span>
  </div>
</div>
`;
